syntax = "proto3";
package quichx;

import "shop.proto";
import "purchase.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";
import "export.proto";

service BillController {
  rpc GetUserBills (google.protobuf.Empty) returns (Bills);
  rpc GetBillData (FtsQrDto) returns (BillDto);
  rpc GetBillDataByBillRequestId (RequestIdDto) returns (BillDto);
  rpc CreateBill (BillDto) returns (Bill);
  rpc EditBill (BillDto) returns (Bill);
  rpc DeleteBill (BillIdDto) returns (google.protobuf.Empty);
}

message Bills {
  repeated Bill bills = 1;
}

message BillDto {
  oneof opBillId {
    string billId = 1;
  }
  ShopDto shopDto = 2;
  google.protobuf.Timestamp billDate = 3;
  oneof opDate {
    string date = 4;
  }
  oneof opTime {
    string time = 5;
  }
  oneof opComment {
    string comment = 6;
  }
  float totalSum = 7;
  repeated PurchaseDto purchases = 8;
  oneof opBillRequestId {
    string billRequestId = 9;
  }
  oneof opProviderCode {
    ProviderCode providerCode = 10;
  }
}

message FtsQrDto {
  string fiscalNumber = 1;
  string fiscalProp = 2;
  string fiscalDocument = 3;
  string ftsDateTime = 4;
  float totalSum = 5;
}

message RequestIdDto {
  string requestId = 1;
}

message BillIdDto {
  string billId = 1;
}

enum ProviderCode {
  FTS = 0;
  FIRST_OFD = 1;
  OFD = 2;
  TAXCOM = 3;
}